tests/parser-test-files/bad-files/parse-type.8.error
error: Malformed type predicate
  --> test:4:19
   |
 4 |  (declare f ((T :a) T => T -> T))
   |                     ^ expected predicate
